--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -1392,9 +1392,9 @@ div.comment_sent{background:#FFC !important;}
 
 .top-table{}
 a#change-dates{
-background:url(../images/calendar_edit.png)no-repeat left;
+background:url(../images/pick-date.png)no-repeat left;
 margin-left:23px;
-padding:11px 0px 13px 17px;
+padding:14px 0px 13px 17px;
 
 }
 
