i have done task

--- a/web/ci/css/common.css
+++ b/web/ci/css/common.css
@@ -274,6 +274,7 @@ ul.site-info li img{ float:left; margin-right:0px; border:none; padding:0px; }
 .widget li#secure span{ padding-top:7px; display:block; }
 .widget li#bestprice span{ padding-top:5px; display:block; }
 .widget li#support img{ padding-top:7px; }
+.widget li.support img{ padding-top:7px; }
 .widget li#forall span{ padding-top:5px; display:block; }
 .widget li#member span{ padding-top:0px; display:block; }
 .widget li#member{ margin-bottom:0px; }
