i have remove bolder text

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -1402,7 +1402,7 @@ div.comment_sent{background:#FFC !important;}
 /* Legacy Table */
 
 .top-table{}
-a#change-dates{padding-left:20px;}
+a#change-dates{padding-left:20px; font-weight:normal;}
 
 #booking-table, .booking_table_city{ clear:both; padding-bottom:10px; border-collapse:separate; position:relative;}
 .booking_table_city{padding-bottom:10px}
