MCWEB-287 Map close X

--- a/web/ci/css/reset.css
+++ b/web/ci/css/reset.css
@@ -55,3 +55,15 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+#close_map_button{
+    background:url(../images/cls_button.png) no-repeat scroll right top transparent;
+    display:block;
+    float:right;
+    width:30px;
+    height:18px;
+    margin-right: -12px;
+    margin-bottom: -8px;
+    height: 20px;
+    /*background:url(http://digitalsbykobke.com/images/close.png) no-repeat center center;*/
+}
