--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -889,9 +889,9 @@ background-image:         linear-gradient(to bottom, #F5F7EF, #EAF0DE);
 .city_tabs ul li.view_map a{text-indent:-99999px;background:url("../images/V2/icon_view_map.png") no-repeat center 8px; width:11px; height:16px; padding:10px 15px;box-shadow: 0 0 2px #CCCCCC;-moz-box-shadow: 0 0 2px #CCCCCC;-webkit-box-shadow: 0 0 2px #CCCCCC; border:1px solid #cccccc;}
 .city_tabs ul li.view_map a:hover, .city_tabs ul li.view_map.ui-tabs-selected a{background-color:#ffffff;}
 
-.city_tabs ul.rating{ float:right; background:#ffffff; margin-right:0px; width:auto; padding:0px; }
+.city_tabs ul.rating{ float:right; margin-right:0px; width:auto; padding:0px; cursor:pointer }
 .city_tabs ul.rating li{margin:0px;}
-.city_tabs ul.rating li span{display:block; padding:10px 10px;  font-size:1.4em; margin-top:-3px; color:#333;}
+.city_tabs ul.rating li span{display:block; padding:10px 10px;  font-size:1.4em; margin-top:-3px; color:#082747;}
 
 .city_hostel{}
 
