--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -893,6 +893,12 @@ background-image:         linear-gradient(to bottom, #F5F7EF, #EAF0DE);
 .city_tabs ul.rating li{margin:0px;}
 .city_tabs ul.rating li span{display:block; padding:10px 10px;  font-size:1.4em; margin-top:-3px; color:#082747;}
 
+.propertyRatingsContainer bar-back.group {
+    display:inline;
+    width:25%;
+    
+}
+
 .city_hostel{}
 
 .hostel_list{
@@ -1305,7 +1311,7 @@ ul.green-li li{ background:url(../images/V2/icon-check-green.png) no-repeat 0px 
 .icon_user_review.is_low{ background-position:0px -40px;}
 .comment_author{ margin-left:20px; padding-top:15px; margin-top:-1px; background:url(../images/V2/comment_author.png) no-repeat top left;}
 
-/* HB reiview bars */
+/* HB review bars */
 .rating_bars span.title{font-weight:bold; font-size:1.2em; margin-bottom:5px; padding-bottom:5px; border-bottom:1px dashed #aaaaaa; display:block;}
 .bar-overview{padding-top:10px;}
 .bar-rating{}
@@ -1326,6 +1332,10 @@ border:1px solid #E8716F;background:#E8716F;
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#E8AFAE', endColorstr='#E8716F'); /* for IE */
 background: -webkit-gradient(linear, left top, left bottom, from(#E8AFAE), to(#E8716F)); /* for webkit browsers */
 background: -moz-linear-gradient(top,  #E8AFAE, #E8716F); /* for firefox 3.6+ */}
+.bar-top.darkYellow {
+    border:1px solid rgb(253,202,55);
+    background:rgb(253,202,55);
+}
 span.rating-cat{font-size:0.9em;display:block; position:absolute; top:5px; left:7px;}
 .bar-back img{position:absolute; top:3px; left:-25px;}
 span.rating-value{font-size:0.9em;font-weight:bold;display:block; position:absolute; top:5px; right:3px;}
