MCWEB-121 District landmarks in property info
city page finish both districts and landmark

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2296,3 +2296,22 @@ a.flag-asia{ background:url(../images/V2/flag-asia.png) no-repeat center left; }
      white-space: nowrap;
      clear:both;
 }
+
+/* districts in city page and hostel page */
+ .city_hostel_districts, 
+ .city_hostel_landmarks{
+          margin-left: 126px;
+          color: #999999;
+          margin-bottom: 0;
+}
+
+/* .city_hostel_districts_values 
+ .city_hostel_landmarks_values{
+     font-weight: bold;
+     }
+     
+.city_hostel_districts_district 
+.city_hostel_landmarks_landmark{
+          font-weight: bold;
+          font-size:14px;
+}*/
