--- a/web/ci/css/reset.css
+++ b/web/ci/css/reset.css
@@ -61,9 +61,9 @@ table {
     display:block;
     float:right;
     width:30px;
-    height:18px;
     margin-right: -12px;
     margin-bottom: -8px;
     height: 20px;
+    position: relative;
     /*background:url(http://digitalsbykobke.com/images/close.png) no-repeat center center;*/
 }
