MCWEB-121_District-landmarks-in-property-info

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2303,7 +2303,7 @@ a.flag-asia{ background:url(../images/V2/flag-asia.png) no-repeat center left; }
 
 .city_hostel_districts_district , .city_hostel_landmarks_landmark{
           font-weight: bold;
-          font-size:14px;
+          /*font-size:14px;*/
 }
 
  .city_hostel_districts_values , .city_hostel_landmarks_values {
@@ -2316,7 +2316,7 @@ a.flag-asia{ background:url(../images/V2/flag-asia.png) no-repeat center left; }
 
 .hostel_districts_district , .hostel_landmarks_landmark{
           font-weight: bold;
-          font-size:14px;
+          /*font-size:14px;*/
 }
 
  .hostel_districts_values , .hostel_landmarks_values {
