MCWEB-121_District-landmarks-in-property-info finished

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2302,3 +2302,34 @@ a.flag-asia{ background:url(../images/V2/flag-asia.png) no-repeat center left; }
   font-size:15px;
  margin-right:5px;
 }
+
+/*  start districts and landmarks in city page  */
+ 
+.city_hostel_districts , .city_hostel_landmarks{
+          margin-left: 126px;
+}
+
+.city_hostel_districts_district , .city_hostel_landmarks_landmark{
+          font-weight: bold;
+          color: #999999;
+}
+
+ .city_hostel_districts_values , .city_hostel_landmarks_values {
+        color: #999999;
+     }
+     
+/*  End districts and landmarks in city page */
+
+/* start districts and landmarks in  hostel page */
+
+.hostel_districts_district , .hostel_landmarks_landmark{
+          font-weight: bold;
+          color: #999999;
+
+}
+
+ .hostel_districts_values , .hostel_landmarks_values {
+        color: #999999;
+     }
+     
+/*  End districts and landmarks in hostel page  */
