--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -1293,7 +1293,7 @@ a.tab_map{background-image:url(../images/V2/icon_view_map.png); background-repea
 
 ul.float-list{float:left; margin-top:0px; margin-bottom:0px; margin-left:1%; margin-right:3%; width:29%;}
 ul.green-li li{ background:url(../images/V2/icon-check-green.png) no-repeat 0px 4px; padding-left:20px; line-height:1.4em; margin-bottom:7px; font-size:1.1em;}
-.amenities_included li strong{ background:#175291; padding:2px 5px; color:#ffffff;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
+.amenities_included li strong{ background:#FCCC07; padding:2px 5px; color:#ffffff;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
 /* user reviews */
 #comment_list_part{margin-top:20px;}
 .comment_list{margin-bottom:10px;}
