--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2280,7 +2280,7 @@ width: 100%;
 text-align: -moz-center;
 text-align: -khtml-center;
 text-align: -webkit-center;
-
+}
 /* districts in city page and hostel page */
 .hostel_mapView_districts .city_mapView_districts {
      display: block;
