--- a/web/ci/css/tools.css
+++ b/web/ci/css/tools.css
@@ -416,5 +416,16 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
 padding-right: 10px;
 padding-left: 6px;
 }
+.label1 {
+border: none;
+font-size: 11px;
+text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
+padding-right: 10px;
+padding-left: 6px;
+color:#000;
+}
+.inputsize{
+width:210px;
+}
 /*end filter*/
 
