--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2390,3 +2390,11 @@ text-align: -webkit-center;
      clear:both;
 }
 /*  End landmarks in city page and hostel page */
+
+
+/*  Start landmark and districts in city page and hostel page */
+.mapView_districtWord , .mapView_landmarkWord{
+     font-weight: bold;
+     padding-right: 5px;
+}
+/*  End landmarks in city page and hostel page */
