--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -1010,7 +1010,7 @@ background-image:         linear-gradient(to bottom, #F5F7EF, #EAF0DE);
 	font-weight:bold;
 }
 .hostel_list h3 a{
-	color:#333333;
+	color:#3087C9;
 }
 
 .hostel_list .info_type{
