functionality for hw site

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2344,6 +2344,10 @@ text-align: -webkit-center;
      clear:both;
 }
 
+.share-email {
+	margin-top: 8px;
+}
+
 #share-overlay {
 	position: fixed;
 	top: 0;
