MCWEB-334 Modify search Open/close

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -570,8 +570,7 @@ ul#bread-crumb li.first{ list-style:none; }
 a.modify_search.expand {
     border-bottom: 1px solid #80B422;margin-bottom: 10px;
     font-size: 1.2em;padding: 5px 0 7px;text-decoration:none;cursor:pointer;
-    display:block;
-              color:#333333;}
+    display:block;}
 a.modify_search strong{
 	background:url(../images/V2/icon_search_side.png) no-repeat left center;
 	padding:3px 0px 5px 30px;
