fix map click funxtion

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2328,7 +2328,8 @@ a.flag-asia{ background:url(../images/V2/flag-asia.png) no-repeat center left; }
 }
 
 /* End Footer */
-.map_number{
+
+.picture_number {
 	background: none repeat scroll 0 0 #FFFFFF;
 	color: #929292;
 	height: 12px;
