fixed latest changes

--- a/web/ci/css/pdf.css
+++ b/web/ci/css/pdf.css
@@ -1,6 +1,13 @@
+#sidebar,
+#share_pdf_container,
 #sidebar .testimonial,
 #sidebar .site-info-box,
 #sidebar .group,
+#ui-datepicker-div,
 #hostel-show-commentaries-tab {
 	display: none;
+}
+
+#main {
+	width: 98%;
 }
