--- a/web/ci/css/pdf.css
+++ b/web/ci/css/pdf.css
@@ -4,8 +4,11 @@
 #sidebar .site-info-box,
 #sidebar .group,
 #ui-datepicker-div,
+#top_bar_inner,
+#hostels_tabs,
+.main ul li a,
 #hostel-show-commentaries-tab {
-	display: none;
+	display: none !important;
 }
 
 #main {
