MCWEB-420 Map for 20 results
paging and mouse out and over finished

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2451,3 +2451,7 @@ color:#fff !important;
 border:1px solid #666;
 }
 /*next 20 result end*/
+
+.property_info_hover{
+    background-color: #F9F9F9;
+}
