--- a/web/ci/css/pdf.css
+++ b/web/ci/css/pdf.css
@@ -7,6 +7,14 @@
 #top_bar_inner,
 #hostels_tabs,
 .main ul li a,
+#top_info_short,
+#read_more_hostel,
+.translation-toggle,
+.fblike,
+#change-dates,
+.select-translate,
+.share-email,
+.best_price,
 #hostel-show-commentaries-tab {
 	display: none !important;
 }
