--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2574,3 +2574,102 @@ float:left; background:linear-gradient(to bottom, #2E69A7 0%, #2E69A7 50%, #1650
     margin-top: 240px;
 }
 /*quick view end*/
+
+/*compare property css start*/
+.propertyselectmsg{
+	margin: 0 0 5px 126px;
+	color:#f20000;
+	display: none;
+}
+.hb_frame .propertyselectmsg{
+	margin: 0 0 5px 126px;
+	color:#f20000;
+	display: none;
+}
+.quick-data{
+    background-color: #F6F6F6;
+    border: 2px solid #CCCCCC;
+    border-radius: 10px 10px 10px 10px;
+    margin-bottom: 10px;
+    min-height: 30px;
+    padding: 10px;
+}
+.head123{
+padding:0px 0px 10px;
+border-bottom: 1px dotted #CCCCCC;
+}
+.head123 p{
+display: inline-block;
+margin: 0;
+width: 91.5%;
+text-align: center;
+}
+.head123 a{
+color:#227BBD;
+}
+.show-data{
+border-bottom: 1px solid #CCCCCC;
+display: inline-block;
+padding: 6px 0;
+width: 100%;
+}
+.show-data .show-data-first-colum{
+width:76%;
+float: left;
+}
+.show-data .show-data-first-colum a{
+width:76%;
+float: left;
+text-decoration: none;
+}
+.show-data .show-data-second-colum{
+width:17%;
+float:left;
+}
+.show-data .show-data-third-colum{
+width:5%;
+float:left;
+color:#227BBD;
+}
+.show-data .show-data-last-colum{
+float:right;	
+padding-right:10px;
+}
+.com_div{
+float: right;
+}
+.info_indent h2{
+display: inline;
+}
+.propertycompare
+{
+ margin-right: 4px;
+ margin-top: 0;
+ vertical-align: middle;
+}
+.comparelink{
+float: right;
+background-color: #6DA903;
+background-image: linear-gradient(to bottom, #96C249, #6DA903);
+border: 1px solid #5EC841;
+box-shadow: 0 0 2px rgba(255, 255, 255, 0.8) inset;
+color: #FFFFFF;
+display: block;
+font-weight: bold;
+text-shadow: 1px 1px 1px #416305;
+border-top-right-radius: 10px;
+margin: -11px -11px 0 0;
+padding: 10px 15px;
+}
+.comparelink a{
+color:#fff;
+text-decoration: none;
+}
+.remove_div{
+padding-top: 6px;
+text-align: right;
+}
+.remove_div a{
+text-decoration:none;
+}
+/*compare property css end*/
