fixes for MCWEB-470 and MCWEB-150

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2499,6 +2499,10 @@ text-align: -webkit-center;
      overflow: hidden;
      clear:both;
 }
+
+.hostel_mapView_landmarks input {
+	margin-right: 5px;
+}
 /*  End landmarks in city page and hostel page */
 
 
