--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -1839,8 +1839,8 @@ padding:10px 15px 10px 10px;	color:#ffffff;	text-shadow:1px 1px 1px #000000;font
 .box_content.map_button_box{padding:0px; border:1px solid #80B422;}
 .map_button_box a{display:block;}
 .map_button_box a:hover{text-decoration:none;}
-.map_button_box span{padding:10px 15px 10px 10px;	color:#ffffff;	text-shadow:1px 1px 1px #000000;font-size:1.2em;	display:block;	position:absolute;	bottom:0px;right:0px;background:url("../images/V2/menu-back.png") repeat-x scroll left center #082747; }
-.map_button_box span strong{background:url("../images/V2/icon_view_map_white.png") no-repeat scroll center left; padding-left:23px;}
+.map_button_box span{padding:10px 15px 10px 10px; color:#ffffff; text-shadow:1px 1px 1px #000000;font-size:1.2em;	display:block;	position:absolute;	bottom:0px;right:0px;background:url("../images/V2/menu-back.png") repeat-x scroll left center #082747; margin-left: 60px;}
+.map_button_box span strong{margin-left: 60px; padding-left:23px;}
 .map_button_view{ padding:10px 10px 10px 33px; font-size:1.2em; color:#333333; font-weight:bold;display:block;
 	border-bottom:1px solid #80B422;
 	background-image:url("../images/V2/icon_view_map_green.png");
