--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2711,10 +2711,34 @@ width: 275px;}
     width: 950px;
     height: 450px;
 }
+#ul_map_filter_tabs .city_filter_tabs ul li a{
+    padding: 10px 30px 20px;
+}
+#filter_content_districts_popup, #filter_content_landmarks_popup{
+    height: 400px;
+}
 
-#city_map_filter_tabs div ul {height:auto; margin-top: 5px; padding: 5px;}
+#city_map_filter_tabs div ul, #cb_group_landmarks_filter {
+    height:95%;
+    overflow-y: scroll;
+    margin-top: 2px;
+    padding: 13px 13px 13px 0;
+    width: 30em;
+    margin-left: -10px;
+    display: block;
+}
+#city_map_filter_tabs div ul li, #cb_group_landmarks_filter li{
+    width: 14em;
+    /*display: inline;*/
+    float:left;
+    /*height: 15px;
+    overflow: hidden;*/
+}
+#city_map_filter_tabs div ul li a{
+    float: left;
+    padding: 7px;
+}
 /*#filter_content_landmarks_popup { display: none;}*/
-#city_map_filter_tabs div ul#cb_group_districts_filter{display: block;margin-left: -10px;}
 /*#city_map_filter_tabs div ul#cb_group_landmarks_filter{display: none; margin-left: 92px;}*/
 #filter_content_landmarks_popup{display: none; }
 #city_map_filter_tabs div ul li{border: none; cursor: pointer;  }
